[VERSION 4.9.7]

* ADDED: Big warning in configure if -lXpm cannot be found.

* FIXED: SunOs 4.1.x/X11R4 detection of -lXpm and -ljpeg libraries failed
  due to a bug in SunOs ld.  Fixed by removing -lXt from the libraries to
  test -lXpm and -ljpeg.

* ADDED: Various libraries:

	library(pce_arrow_item)		Show/define arrow-head
	library(pce_config)		Configuration access
	library(pce_configeditor)	Edit configurations
	library(pce_graphical_browser)	Browse graphicals
	library(pce_image_browser)	Find images
	library(pce_image_item)		Show/browse image
	library(pce_set_item)		Edit set, based on editor for single

* PCEDRAW: many changes: added export of drawings as Prolog term, interface
  to the configuration library, new format for prototypes, which are now
  saved with the image, etc. etc.

* ADDED: `path ->points' and an optional additional argument to
  `path->initialise' for specifying the points as new() arguments.

* FIXED: push_operators/pop_operators to deal with op(Num, Kind, ListOfAtoms).

* FIXED: reentrance in rewindAnswerStack(), which may be caused
  by exception-handling and unlink-handling during a free invoked by
  another rewindAnswerStack().  Thanks to Heddrik van Rijn for providing
  me with a program to reproduce this error, which may leave the system 
  with an illegal answerStack, causing an infinite loop of crashes.

* FIXED: Win32 `frame->geometry' for WxH-x-y, position relative to the right
  edge of the screen.

* FIXED: Win32: realise XPCE's pallete before `image->draw_in' and
  similar operations.

* ADDED: Win32 colour garbage-collection.

* FIXED: sometimes no redraw after `button->label'

* FIXED: Various things around plain display of arrow instances: proper
  redraw when displayed on nested devices, automatic update on attribute
  changes.

* ADDED: Application configuration library: library(pce_config).  See
  PceDraw for an example.  The definition of the PceDraw configuration options