@@ -50,8 +50,8 @@ typedef void *		PceObject;	/* PCE's view of an object */
 typedef void *		PceName;	/* PCE's view of a name */
 
 #define INT_MASK_SHIFT	1
-#define PCE_MAX_INT	((1L << (sizeof(Any)*8 - INT_MASK_SHIFT - 1)) - 1)
-#define PCE_MIN_INT	(-(long)PCE_MAX_INT - 1)
+#define PCE_MAX_INT	((long)((1L<<(sizeof(Any)*8 - INT_MASK_SHIFT-1))-1))
+#define PCE_MIN_INT	(-(PCE_MAX_INT-1))
 
 typedef void *		AnswerMark;	/* Mark on AnswerStack */
 
